[project]
name = "substack-history-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.14.11",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "python-lsp-server>=1.13.0",
    "requests>=2.32.4",
    "ruff>=0.12.4",
]
